--- a/package.json
+++ b/package.json
@@ -9,11 +9,18 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
     "browser-sync": "^2.24.5",
     "gulp": "^3.9.1",
+    "http-proxy-middleware": "^0.18.0"
+  },
+  "dependencies": {
+    "gulp-babel": "^7.0.0",
+    "gulp-rename": "^1.4.0",
+    "gulp-uglify": "^3.0.2",
     "gulp-clean": "^0.4.0",
     "gulp-connect": "^5.5.0",
-    "gulp-sass": "^4.0.1",
-    "http-proxy-middleware": "^0.18.0"
+    "gulp-sass": "^4.0.1"
   }
 }
