--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
   },
   "dependencies": {
     "gulp-babel": "^7.0.0",
-    "gulp-rename": "^1.4.0",
-    "gulp-uglify": "^3.0.2",
     "gulp-clean": "^0.4.0",
     "gulp-connect": "^5.5.0",
-    "gulp-sass": "^4.0.1"
+    "gulp-rename": "^1.4.0",
+    "gulp-sass": "^4.0.1",
+    "gulp-uglify": "^3.0.2",
+    "gulp-util": "^3.0.8"
   }
 }
